fix cocoon form

--- a/app/views/layouts/parts/_footer.html.erb
+++ b/app/views/layouts/parts/_footer.html.erb
@@ -10,6 +10,7 @@
       </div>
   </footer>
   <!-- End Footer -->
+  <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.14.1/moment.min.js"></script>
 
 <% if App.is_management? %>
   <%= stylesheet_link_tag    'management/core', media: 'all', 'data-turbolinks-track' => true  %>
