--- a/app/views/client/events/show.html.erb
+++ b/app/views/client/events/show.html.erb
@@ -31,7 +31,9 @@
         </div>
       </div>
       <div class="col-xs-12 col-md-4">
-        <a class="btn btn-block btn-daydash btn-daydash-lg btn-daydash-green-1" href="<%= client_event_payment_path(@event) %>">ซื้อตั๋ว - ฿600</a>
+        <button type="button" class="btn btn-block btn-daydash btn-daydash-lg btn-daydash-green-1" data-toggle="modal" data-target="#ticket-list-modal">
+          ซื้อตั๋ว - ฿600
+        </button>      
         <div class="map-panel">
           <div id="google-map"></div>
         </div>
@@ -79,6 +81,43 @@
     </div>
   </div>
 </div>
+
+<div class="modal fade" tabindex="-1" role="dialog" id="ticket-list-modal">
+  <div class="modal-dialog" role="document">
+    <%= form_tag client_event_payment_path(@event.id), id: :payment do  %>
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          <h4 class="modal-title">Select Ticket</h4>
+        </div>
+        <div class="table-responsive">
+          <table class="table table-hover">
+            <% @tickets.each do |ticket| %>
+            <tr>
+              <td>
+                <div class="ticket-name"><%= ticket[:title] %></div>
+                <div class="ticket-meta">
+                  <span class="ticket-price">฿ <%= ticket[:price] %></span> <span class="ticket-quantity">x 1</span>
+                </div>
+              </td>
+              <td width="100" align="right">
+                <select class="form-control">
+                  <% (0..5).each do |i| %>
+                  <option value="<%= i %>"><%= i %></option>
+                  <% end %>
+                </select>
+              </td>
+            </tr>
+            <% end %>
+          </table>
+        </div>
+        <div class="modal-footer">
+          <button class="btn btn-daydash btn-daydash-green-1">NEXT</button>
+        </div>
+      </div><!-- /.modal-content -->
+    <% end %>
+  </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
 
 <!-- Google Map -->
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBYyAbr0KMSO5pXyEqNYp9_c6KdbYb9P5A&libraries=places" async defer></script>
