--- a/app/views/client/events/index.html.erb
+++ b/app/views/client/events/index.html.erb
@@ -38,7 +38,7 @@
       <% @events.each do |event| %>
         <div class="col-sm-6 col-md-4">
           <div class="event card">
-            <%= link_to client_event_path(event.name) do %>
+            <%= link_to client_event_path(event.id) do %>
               <% if event.galleries.present? %>
                 <div class="cover" style="background-image: url(<%= event.galleries.first.try(:media, :thumb) %>);"></div>
               <% else %>
@@ -47,7 +47,7 @@
             <% end %>
             <div class="info">
               <h4 class="title text-left">
-                <%= link_to event.title, client_event_path(event.name) %>
+                <%= link_to event.title, client_event_path(event.id) %>
               </h4>
               <div class="meta date"><i class="icon icon-xs icon-calendar"></i> วันเสาร์ ที่ 22 สิงหาคม, 8:00 PM</div>
               <div class="meta location"><i class="icon icon-xs icon-map-pin"></i> Thonglor House Club, ซอยทองหล่อ</div>
