--- a/app/views/client/events/show.html.erb
+++ b/app/views/client/events/show.html.erb
@@ -15,8 +15,8 @@
       <div class="col-xs-12 col-md-8">
         <div class="row">
           <div class="col-xs-12">
-            <div class="meta date"><i class="icon icon-xs icon-calendar"></i> วันเสาร์ ที่ 22 สิงหาคม, 8:00 PM</div>
-            <div class="meta location"><i class="icon icon-xs icon-map-pin"></i> Thonglor House Club, ซอยทองหล่อ</div>
+            <div class="meta date"><i class="icon icon-xs icon-calendar"></i> <%= @section.event_time.strftime("%A %d %B, %H:%M") %></div>
+            <div class="meta location"><i class="icon icon-xs icon-map-pin"></i> <%= @event.location %></div>
           </div>
         </div>
         <div class="description">
@@ -32,8 +32,8 @@
       </div>
       <div class="col-xs-12 col-md-4">
         <button type="button" class="btn btn-block btn-daydash btn-daydash-lg btn-daydash-green-1" data-toggle="modal" data-target="#ticket-list-modal">
-          ซื้อตั๋ว - ฿600
-        </button>      
+          ซื้อตั๋ว - <%= @section.price %>
+        </button>
         <div class="map-panel">
           <div id="google-map"></div>
         </div>
@@ -84,7 +84,7 @@
 
 <div class="modal fade" tabindex="-1" role="dialog" id="ticket-list-modal">
   <div class="modal-dialog" role="document">
-    <%= form_tag client_event_payment_path(@event.id), id: :payment do  %>
+    <%= form_tag client_event_express_path(@event.id), id: :payment do  %>
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
@@ -92,18 +92,18 @@
         </div>
         <div class="table-responsive">
           <table class="table table-hover">
-            <% @tickets.each do |ticket| %>
+            <% @event.sections.each do |section| %>
             <tr>
               <td>
-                <div class="ticket-name"><%= ticket[:title] %></div>
+                <div class="ticket-name"><%= section.title %></div>
                 <div class="ticket-meta">
-                  <span class="ticket-price">฿ <%= ticket[:price] %></span> <span class="ticket-quantity">x 1</span>
+                  <span class="ticket-price">฿ <%= section.price %></span> <span class="ticket-quantity">x 1</span>
                 </div>
               </td>
               <td width="100" align="right">
                 <select class="form-control">
-                  <% (0..5).each do |i| %>
-                  <option value="<%= i %>"><%= i %></option>
+                  <% (0..1).each do |i| %>
+                    <option value="<%= i %>"><%= i %></option>
                   <% end %>
                 </select>
               </td>
@@ -124,7 +124,7 @@
 <script>
   $(function() {
     var map = new google.maps.Map(document.getElementById('google-map'), {
-      center: {lat: 13.7563309, lng: 100.50176510000006},
+      center: {lat: <%= @event.latitude %>, lng: <%= @event.longitude %>},
       zoom: 13,
       scrollwheel: false,
     });
