Organizer - Front End

--- a/app/views/client/profile/tickets.html.erb
+++ b/app/views/client/profile/tickets.html.erb
@@ -22,10 +22,10 @@
           </div>
           <div class="list-body">
             <% @tickets.each do |ticket| %>
-            <div class="ticket">
-              <div class="ticket-cover" style="background-image: url(<%= ticket[:event].get_thumbnail %>);">
+            <div class="ticket card-side-cover">
+              <div class="cover" style="background-image: url(<%= ticket[:event].get_thumbnail %>);">
               </div>
-              <div class="ticket-info">
+              <div class="info">
                 <div class="info-body">
                   <h4 class="title"><%= ticket[:event].title %></h4>
                   <div class="meta date">วันเสาร์ ที่ 22 สิงหาคม, 8:00 PM</div>
@@ -38,9 +38,8 @@
                       <span class="purchase-date">purchased on <%= ticket[:purchased_date] %></span>
                     </div>
                     <div class="col-xs-12 col-md-6">
-                      <ul class="list-inline pull-right">
+                      <ul class="list-inline list-action-nav pull-right">
                         <li><a href="#">View Ticket</a></li>
-                        <li>|</li>
                         <li><a href="<%= client_event_path(ticket[:event].id) %>">View Event</a></li>
                       </ul>
                     </div>
