--- a/app/views/client/events/express.html.erb
+++ b/app/views/client/events/express.html.erb
@@ -27,12 +27,13 @@
             <div class="ticket-list">
               <div class="list-body">
                 <% @event.sections.each do |section| %>
+                <% next if @tickets[:"#{section.id}"].nil? %>
                 <div class="ticket row">
                   <div class="col-xs-8 ticket-title">
                     <%= section.avaliable %> x ฿ <%= section.price %> <%= section.title %>
                   </div>
                   <div class="col-xs-4 ticket-price">
-                  ฿ <%= section.price * section.avaliable %>
+                  ฿ <%= section.price * @tickets[:"#{section.id}"][:quantity] %>
                   </div>
                 </div>
                 <% end %>
@@ -146,6 +147,7 @@
                     </script>
                     <input type="hidden" name="omise_token">
                     <input type="hidden" name="payment_method">
+                    <input type="hidden" name="payment_amount" value="<%= @total %>">
                     <script type="text/javascript">
                       $(document).ready(function(){
                         $("#checkout").submit(function () {
